--- a/Todo/src/index.html
+++ b/Todo/src/index.html
@@ -1,15 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
-  <base href="/">
   <meta charset="utf-8">
-  <title>Todo</title>
+  <title>Ng2Tut</title>
+  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <h1>index</h1>
-  <app-root>Loading....</app-root>
+  <app-root>Loading...</app-root>
 </body>
 </html>
